--- a/StockAndPortfolioManagementSystem/src/main/resources/app.properties
+++ b/StockAndPortfolioManagementSystem/src/main/resources/app.properties
@@ -6,8 +6,10 @@ url=jdbc:mysql://localhost:3306/spm
 
 #hibernate properties
 dialect=org.hibernate.dialect.MySQL57Dialect
-ddl=update
-#ddl=create
+
+ddl=create
+#ddl=update
+
 
 #IRVR
 mvc.prefix=/WEB-INF/views/
