--- a/StockAndPortfolioManagementSystem/src/main/resources/app.properties
+++ b/StockAndPortfolioManagementSystem/src/main/resources/app.properties
@@ -7,8 +7,8 @@ url=jdbc:mysql://localhost:3306/spm
 #hibernate properties
 dialect=org.hibernate.dialect.MySQL57Dialect
 
-ddl=create
-#ddl=update
+#ddl=create
+ddl=update
 
 
 #IRVR
